tests/agl/rejections/match/non_exhaustive_nested_payload.agl
enum Box
  | box(flag: bool)
  | empty

let value = box(flag = false)
case value of
  | box(flag = false) => ()
  | empty => ()
